--- a/css/style.css
+++ b/css/style.css
@@ -73,9 +73,9 @@ img{
                 width: 100%;
                 height: 900px;
                 top: 0;
-				left: 0;
-				right: 0;
-				bottom: 0;
+		left: 0;
+		right: 0;
+		bottom: 0;
 				
             }
 /*Header*/
@@ -106,9 +106,9 @@ margin-right: 10px;
 a.btn{	
 font-size: 22px;
 line-height: 25px;
-	padding: 5px 10px;
-	border: 2px solid;
-	border-radius: 2px;
+padding: 5px 10px;
+border: 2px solid;
+border-radius: 2px;
 }
 a.btn:hover{
 	color:#0093FF ;
@@ -185,8 +185,10 @@ button.header-meadle-4{
     background-image: url(../images/Object.svg);
     left: 34px;
     width: 45px;
-	height: 45px;
+    height: 45px;
     top: 17px;
+z-index:500;	  
+	  
   }
 .header-meadle-4 {
 	margin: 5px;
